Fixed sizing issues for SelectProfile page (button to add new profile is covered by navbar)

--- a/scouting/src/components/navigation/search-nav/SearchRobots.css
+++ b/scouting/src/components/navigation/search-nav/SearchRobots.css
@@ -54,7 +54,7 @@
   
   .searchRobots_scrollView {
     overflow-y: auto;
-    height: 70vh;
+    max-height: 70vh;
     flex-grow: 1;
   }
   
